Misc cleanup and logic decoupling